# hikelog

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  compose.yaml
apps/api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 2026_01_18_220841_ade3aca774f4_create_trips_and_stages.py  2026_01_20_212107_fb907b7db820_add_admin_users_table.py  2026_03_28_150000_add_gallery_images.py  2026_03_28_170000_add_trip_map_center.py  2026_03_28_190000_add_activities.py  2026_03_28_210000_add_activity_photos.py  2026_03_29_120000_add_photo_gps_coordinates.py  2026_03_29_133000_add_tiny_thumbnails_for_photos.py  2026_03_29_190000_add_trip_images.py  2026_03_29_210000_add_global_content_table.py  2026_03_29_220000_drop_stages_table.py  2026_03_30_180000_add_trip_map_card_image.py  2026_03_30_200000_add_trip_and_activity_comments.py  2026_04_03_120000_add_strava_connection_table.py  2026_04_05_120000_make_activity_ids_bigint.py  2026_04_08_120000_add_activity_photo_resize_setting.py  2026_04_09_120000_add_activity_audios.py  2026_04_09_150000_add_activity_audio_transcription_settings.py  2026_04_09_180000_add_enabled_language_codes_to_global_content.py  2026_04_16_120000_add_openai_model_to_global_content.py  2026_04_16_150000_add_capture_datetime_to_activity_photos.py  2026_04_16_160000_add_activity_videos_table.py  2026_04_16_170000_add_activity_video_max_upload_size_to_global_content.py  2026_05_02_120000_add_activity_timezone.py  2026_05_02_130000_rename_media_capture_datetime.py  2026_05_02_140000_add_media_capture_metadata.py
apps/api/app/: main.py
apps/api/app/auth/: admin.py  session.py
apps/api/app/core/: config.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  activity.py  stage.py  (+11 more)
apps/api/scripts/: import_travellog.py
apps/api/tests/: test_activity_timezones.py  test_admin_session.py  test_media_capture_metadata.py  test_strava_connection_refresh.py
(+120 files in other folders)
