[project]
name = "hikelog-api"
version = "0.1.0"
description = "HikeLog backend API"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
]

# ----------------------------
# Ruff (linting)
# ----------------------------
[tool.ruff]
target-version = "py311"
line-length = 100

select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
]

ignore = [
    "E501",  # line length handled separately
]

exclude = [
    ".venv",
    "__pycache__",
]

[tool.ruff.isort]
known-first-party = ["app"]

# ----------------------------
# Pytest (future-proof, optional)
# ----------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
