[project]
name = "hikelog-api"
version = "0.1.0"
description = "HikeLog backend API"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "google-auth>=2.38",
    "requests>=2.31",
    "email-validator>=2.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "python-dotenv>=1.0",
]

# ----------------------------
# Ruff (linting)
# ----------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

exclude = [
    ".venv",
    "__pycache__",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ----------------------------
# Pytest (future-proof, optional)
# ----------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.setuptools]
packages = ["app"]